--- a/weatherWidgets/src/app/weather-current-time/weather-current-time.component.html
+++ b/weatherWidgets/src/app/weather-current-time/weather-current-time.component.html
@@ -1,3 +1,9 @@
-<p>
-  weather-current-time works!
-</p>
+<div class='weathWidget'>
+  <small>Cherni Gorod, AZ</small>
+  <button>x</button>
+  <a href="/curTime">
+    <img src="//cdn.apixu.com/weather/64x64/day/122.png">
+
+    <small>6 °c (42.8 °f)</small>
+  </a>
+</div>
