--- a/weatherWidgets/src/app/app.component.css
+++ b/weatherWidgets/src/app/app.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 }
-.welcomeDiv h1,
+.welcomeDiv flex h1,
 .welcomeDiv h4,
 .welcomeDiv input {
   text-align: center;
