--- a/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.html
+++ b/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.html
@@ -1,3 +1,86 @@
-<p>
-  current-weather-and-by5-day works!
-</p>
+<div class='weather5Days'>
+  <h4>Baki Azerbaijan</h4>
+
+  <div class="weather5DaysContainer">
+    <!-- <div class="apixu-weather-todays-stats-big-pict">
+      <img src="//cdn.apixu.com/weather/128x128/day/122.png">
+      <span>Overcast</span>
+    </div>
+
+    <div class="">
+      <span>Wind: 5.6 mph</span>
+      <span>Precip: 0.0 in</span>
+      <span>Pressure: 30.7 in</span>
+    </div>
+
+    <div class="apixu-weather-current-temp">
+      41.0<span> °f</span>
+    </div> -->
+
+    <!-- <div class="apixu-weather-forecast awe_days_5 awecf">
+      <div class="apixu-weather-forecast-day">
+        <div class="apixu - weather - forecast - day - abbr">
+          Thu
+        </div>
+      <div class="apixu-weather-forecast-day-abbr">
+        <div class="">
+          <img src="//cdn.apixu.com/weather/64x64/day/116.png">
+        </div>
+      </div>
+      <div class="apixu - weather - forecast - day - temp">
+        47.0<span> °f</span>
+      </div>
+    </div>
+    <div class="apixu-weather-forecast-day">
+      <div class="apixu - weather - forecast - day - abbr">
+        Fri
+      </div>
+      <div class="apixu-weather-forecast-day-abbr">
+        <div class="">
+          <img src="//cdn.apixu.com/weather/64x64/day/116.png">
+        </div>
+      </div>
+      <div class="apixu - weather - forecast - day - temp">
+        47.8<span> °f</span>
+      </div>
+    </div>
+    <div class="apixu-weather-forecast-day">
+      <div class="apixu - weather - forecast - day - abbr">
+        Sat
+      </div>
+      <div class="apixu-weather-forecast-day-abbr">
+        <div class="">
+          <img src="//cdn.apixu.com/weather/64x64/day/176.png">
+        </div>
+      </div>
+      <div class="apixu - weather - forecast - day - temp">
+        43.8<span> °f</span>
+      </div>
+    </div>
+    <div class="apixu-weather-forecast-day">
+      <div class="apixu - weather - forecast - day - abbr">
+        Sun
+      </div>
+      <div class="apixu-weather-forecast-day-abbr">
+        <div class="">
+          <img src="//cdn.apixu.com/weather/64x64/day/266.png">
+        </div>
+      </div>
+      <div class="apixu - weather - forecast - day - temp">
+        39.3<span> °f</span>
+      </div>
+    </div>
+    <div class="apixu-weather-forecast-day">
+      <div class="apixu - weather - forecast - day - abbr">
+        Mon
+      </div>
+      <div class="apixu-weather-forecast-day-abbr">
+        <div class="">
+          <img src="//cdn.apixu.com/weather/64x64/day/116.png">
+        </div>
+      </div>
+      <div class="apixu - weather - forecast - day - temp">
+        47.2<span> °f</span>
+      </div>
+    </div> -->
+</div>
