--- a/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.less
+++ b/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.less
@@ -1,19 +1,26 @@
 .weather5Days
 {
-    h4
-    {
-        font-size: 20px;
-    }
 
-    .weather5DaysContainer
-    {
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 14px;
-        transition: background 0.5s ease-in;
-        color: #fff;
-        background-image: './assets/4_widget3.png';
 
-    }
+  h4
+  {
+    font-size: 20px;
+    color: #41403c;
+  }
+
+  .weather5DaysContainer
+  {
+    border-radius: 10px;
+    overflow: hidden;
+    font-size: 16px;
+    line-height: 14px;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-sizing: border-box;
+    // background-image: url(./assets/4_widget3.png);
+    background-color: cornflowerblue;
+  }
 }
