--- a/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.html
+++ b/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.html
@@ -2,20 +2,20 @@
   <h4>{{weather.region}} {{weather.country}}</h4>
 
   <div class="weather5DaysContainer">
-    <div class="apixu-weather-todays-stats-big-pict">
+    <div class="weathIconText">
       <img src='{{weather.icon}}'>
       <span>{{weather.text}}</span>
     </div>
 
-    <!--<div class="">
+    <div class="weatherDetails">
       <span>Wind: 5.6 mph</span>
       <span>Precip: 0.0 in</span>
       <span>Pressure: 30.7 in</span>
     </div>
 
-    <div class="apixu-weather-current-temp">
-      41.0<span> °f</span>
-    </div> -->
+    <label class="celDeg">
+      41.0°f
+    </label>
 
     <!-- <div class="apixu-weather-forecast awe_days_5 awecf">
       <div class="apixu-weather-forecast-day">
