--- a/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.less
+++ b/weatherWidgets/src/app/current-weather-and-by5-day/current-weather-and-by5-day.component.less
@@ -1,6 +1,6 @@
 .weather5Days
 {
-  width: 400px;
+  width: 450px;
   margin: 0 auto;
 
   h4
@@ -25,18 +25,16 @@
     color: #fff;
 
     display: grid;
-    grid-template-rows: 1fr 0.5fr 1fr;
-    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 0.5fr 0.5fr 1fr;
+    grid-template-columns: 2fr 1.5fr;
 
     .weathIconText
     {
       grid-column: 1;
-      grid-row: 1;
+      grid-row: 1 / span 2;
 
       text-align: center;
-      width: 50%;
-      float: left;
-      padding: 15px 15px 5px 15px;
+      padding: 20px;
       font-size: 20px;
 
       img
@@ -55,6 +53,7 @@
       text-align: center;
       margin: auto 0;
       line-height: 1.2;
+      padding-top: 10px;
     }
 
     .celDeg
@@ -64,7 +63,19 @@
 
       text-align: center;
       font-size: 200%;
-      line-height: 1em;
+      margin: auto 0;
+    }
+
+    table
+    {
+      grid-column: 1 / span 2;
+      grid-row: 3;
+      padding-bottom: 10px;
+
+      td
+      {
+        text-align: center;
+      }
     }
   }
 }
