--- a/weatherWidgets/src/styles.css
+++ b/weatherWidgets/src/styles.css
@@ -1,10 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-body
-{
+body {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
-
-  h1, h3, h4
-  {
-    cursor: default;
-  }
+}
+body h1,
+body h3,
+body h4 {
+  cursor: default;
 }
