--- a/weatherWidgets/src/app/current-weather-by7-day/current-weather-by7-day.component.css
+++ b/weatherWidgets/src/app/current-weather-by7-day/current-weather-by7-day.component.css
@@ -27,6 +27,9 @@
 .weatherByWeek ul li:hover {
   color: white;
 }
+.weatherByWeek ul .active {
+  background-color: #339900;
+}
 .weatherByWeek table {
   border-bottom: 2px solid #ec972f;
   width: 100%;
