--- a/weatherWidgets/src/app/current-weather-by7-day/current-weather-by7-day.component.html
+++ b/weatherWidgets/src/app/current-weather-by7-day/current-weather-by7-day.component.html
@@ -2,7 +2,7 @@
   <h3>Weather in {{weather.name}}, {{weather.region}}, {{weather.country}} this weekend</h3>
 
   <ul>
-    <li *ngFor='let i of iNumber' (click)="weatherDay(i)" [class.active]='i === dayNumTemp' id={{i}} >{{weather.weatherBy7DaysList[i].date | date: 'EEE MM/yy'}}</li>
+    <li *ngFor='let i of iNumber' (click)="weatherDay(i)" [class.active]='i === dayNumTemp'>{{weather.weatherBy7DaysList[i].date | date: 'EEE MM/yy'}}</li>
   </ul>
 
   <table>
